fix z-index of side-bar menu

--- a/src/app.scss
+++ b/src/app.scss
@@ -327,7 +327,7 @@ $modal-background-background-color-dark: rgba($dark, 0.86) !default; // remove t
 }
 
 aside.menu.main-menu {
-  z-index:1;
+  z-index:50;
   position: fixed;
   width: var(--sidebarWidth);
   padding-right: 20px;
